--- a/index.html
+++ b/index.html
@@ -2,3 +2,12 @@
 layout: index
 title: Home
 ---
+
+<ul>
+{% for post in site.posts %}
+  <li>
+    <a href="{% post.permalink %}">{% post.title %}</a>
+    <p>{{ post.excerpt }}</p>
+  </li>
+{% endfor %}
+</ul>
